--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -18,8 +18,9 @@
           %li
             %a.no-hover.site-title{:href => dashboard_path}
               - if current_course
-                %span.course.left= "#{current_course.courseno}"
-                %span.course_name.left= "#{current_course.name}"
+                %span.course.left= "#{current_course.courseno} "
+                %span.course_name.left= "#{current_course.name} "
+                %span.course_semester.left.hidden-sm= "#{current_course.try(:semester).capitalize} #{current_course.try(:year)}"
                 - if current_course.tagline?
                   %span.tagline.left.hidden-sm= current_course.try(:tagline)
               - else
