--- a/app/views/info/_in_progress_grades_table.haml
+++ b/app/views/info/_in_progress_grades_table.haml
@@ -4,9 +4,9 @@
 
 - @in_progress_grades_by_assignment.each do |assignment, grades|
   .assignment-in-progress
-    %h5
+    %h4.assignment_name
       = link_to assignment.name, assignment
-      %span= link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
+      = link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
 
     = form_tag edit_status_grades_assignment_path assignment do
       %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "inProgressTableCaption"}
@@ -41,10 +41,14 @@
                   %td= raw g.feedback
                 %td
                   .right
-                    %ul
+                    %ul.button-bar
                       %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Grade"), assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
                       %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
                 %td.center= check_box_tag "grade_ids[]", g.id
-      .right
-        .submit-buttons
+      .submit-buttons
+        .right
           = submit_tag "Update Selected Grade Statuses", :class => "button"
+
+
+
+  %hr.dotted
