--- a/app/views/info/_ungraded_submissions_table.haml
+++ b/app/views/info/_ungraded_submissions_table.haml
@@ -3,10 +3,9 @@
   %span.label.alert= @count_ungraded
 
 - @ungraded_submissions_by_assignment.each do |assignment, submissions|
-  %h5
+  %h4.assignment_name
     = link_to assignment.name, assignment
-    %span= link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
-
+    = link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
   %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "ungradedTableCaption"}
     %thead
       %tr
@@ -37,7 +36,7 @@
                   = link_to team.try(:name), team
               %td
                 .right
-                  %ul
+                  %ul.button-bar
                     %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(ug_assignment, :id => ug.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
             - elsif ug_assignment.has_groups?
@@ -45,6 +44,7 @@
               %td= ug.updated_at
               %td
                 .right
-                  %ul
+                  %ul.button-bar
                     %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_grade_path(ug_assignment, :group_id => ug_group.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(ug_assignment, :group_id => ug_group), :class => "button"
+  %hr.dotted
