--- a/app/views/info/_unreleased_grades_table.haml
+++ b/app/views/info/_unreleased_grades_table.haml
@@ -4,13 +4,12 @@
 
 - @unreleased_grades_by_assignment.each do |assignment, grades|
   .assignment-unreleased
-    %h5
+    %h4.assignment_name
       = link_to assignment.name, assignment
-      %span
-        - if assignment.is_individual?
-          = link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
-        - else
-          = link_to 'Grade', assignment, :class => "button"
+      - if assignment.is_individual?
+        = link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
+      - else
+        = link_to 'Grade', assignment, :class => "button"
 
     = form_tag edit_status_grades_assignment_path assignment do
       %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "unreleasedTableCaption"}
@@ -52,7 +51,7 @@
               %td= raw g.feedback
               %td
                 .right
-                  %ul
+                  %ul.button-bar
                     %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Grade"), assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
                     %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
               %td.center
@@ -62,4 +61,7 @@
                     Check/Uncheck #{first_name} #{last_name}
 
       .submit-buttons
-        = submit_tag "Update Selected Grade Statuses", :class => "button"
+        .right
+          = submit_tag "Update Selected Grade Statuses", :class => "button"
+
+  %hr.dotted
