--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -5,7 +5,7 @@
 .pageContent
   = render 'layouts/alerts'
   
-  %span.label.alert= @resubmission_count
+  %span.label.alert= "You have #{@resubmission_count} resubmissions to grade"
 
   - if current_course.has_teams?
     .team-filter
@@ -48,14 +48,14 @@
               %td= re.updated_at
               %td
                 .right
-                  %ul
+                  %ul.button-bar
                     %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(re.assignment, :id => re.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => re.student.try(:id)), :class => "button"
             - elsif re.assignment.has_groups?
               %td= link_to re.group.try(:name), group_path(:id => re.group.id)
               %td
                 .right
-                  %ul
+                  %ul.button-bar
                     %li= link_to re.group.try(:name), group_path(re.group)
                     %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(re.assignment, :group_id => re.group.id), :class => "button"
               %td= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(re.assignment, :group_id => re.group), :class => "button"
