--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -1,9 +1,15 @@
 = content_nav_for "Ungraded #{term_for :assignment} Submissions"
 
-%h3.pagetitle= "#{@count_ungraded} #{@title}"
+%h3.pagetitle= "#{@title}"
 
 .pageContent
   = render 'layouts/alerts'
+
+  %span.label.alert= "You have #{@count_ungraded} ungraded #{term_for :assignments}"
+
+  %br
+
+  %br
   
   %table.nofeatures_default_due_date_dynatable{"aria-describedby" => "ungradedTableCaption"}
     %thead
@@ -34,12 +40,12 @@
           - if submission.assignment.is_individual?
             %td
               .right
-                %ul
+                %ul.button-bar
                   %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
                   %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(:assignment_id => submission.assignment.id, :student_id => submission.student.try(:id)), :class => "button"
           - else
             %td
               .right
-                %ul
+                %ul.button-bar
                   %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
                   %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(submission.assignment, :group_id => submission.group), :class => "button"
