Fix inline display of assignments on index

--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -100,6 +100,9 @@ h4.assignment_name
   font-size: 1.25rem
   font-weight: normal
 
+.assignment-type-name
+  display: inline
+
 h5.section-title
   font-size: 1.3rem
   background-color: $primary-color-1
