--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -16,7 +16,7 @@
   %tbody
     - students.each do |student|
       %tr
-        %td 
+        %td
           - if student.avatar_file_name.present?
             %img.img-rounded{:src => student.avatar_file_name, :width => 30}
         %td= link_to student.first_name, student_path(student)
@@ -37,7 +37,8 @@
           - if student.grade_for_course(current_course).present?
             = student.grade_for_course(current_course).name
         %td
-          .right
+          = div_for student, class: "right" do
             %ul.button-bar
+              %li= link_to flagged_user_icon(current_course, current_user, student.id), flag_user_path(student), method: :post, remote: true, class: "button flagged-user-icon"
               %li= link_to raw("<i class='fa fa-edit fa-fw'> </i> Edit"), edit_user_path(student), :class => "button"
               %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), student.course_memberships.where(:course_id => current_course.id).first, :class => 'button', :data => { confirm: 'This will delete the student from your course - Are you sure?' }, :method => :delete
