fixed display of due date item

--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -116,7 +116,7 @@
                     Shown in Predictor
                     
               %td
-                - if assignment.assignment_type.include_in_to_do?
+                - if assignment.include_in_to_do?
                   %a
                     %i.fa.fa-list.fa-fw
                   .display_on_hover.hover-style
