--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -69,7 +69,7 @@
               %a
                 %i.fa.fa-envelope.fa-fw
               .display_on_hover.hover-style
-                Notify Students on Release
+                Email Students on Release
                 
             %th{:scope => "col"} Grade Form Preview
             %th{:scope => "col"} Points
@@ -141,7 +141,7 @@
                   %a
                     %i.fa.fa-envelope.fa-fw
                   .display_on_hover.hover-style
-                    Notify Students on Release
+                    Email Students on Release
                     
 
               %td
