New icon for flagged users

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -98,6 +98,12 @@ tbody
   text-align: center
   float: right
 
+.flagged-user-icon > .fa-flag
+  color: $color-grey-6
+
+  &.flagged
+    color: $color-orange-1
+
 @media (max-width: 1000px)
   .hide-for-small
     display: none
