--- a/app/assets/stylesheets/color.sass
+++ b/app/assets/stylesheets/color.sass
@@ -36,6 +36,7 @@ $color-grey-2: #666666
 $color-grey-3: #CCCCCC
 $color-grey-4: #EEEEEE
 $color-grey-5: #FFFFFF
+$color-grey-6: #999999
 
 $color-black: $color-grey-00 // alias
 $color-white: $color-grey-5 // alias
