--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -65,7 +65,7 @@
 
 %h5 Users
 %li= link_to_unless_current raw("<i class='fa fa-user fa-fw'></i> #{term_for :students}"), students_path
-%li= link_to_unless_current raw("<i class='fa fa-star fa-fw'></i> Flagged #{term_for :students}"), flagged_students_path
+%li= link_to_unless_current raw("<i class='fa fa-flag fa-fw'></i> Flagged #{term_for :students}"), flagged_students_path
 - if current_course.has_teams?
   %li= link_to_unless_current raw("<i class='fa fa-users fa-fw'></i> #{term_for :teams}"), teams_path
 %li= link_to_unless_current raw("<i class='fa fa-user-plus fa-fw'></i> #{term_for :groups}"), groups_path
