--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -16,6 +16,7 @@
   %table.nofeatures_default_rank_dynatable
     %thead
       %tr
+        %th
         %th{:scope => "col", "data-dynatable-sorts" => "rank"} Rank
         %th{:scope => "col"} First Name
         %th{:scope => "col"} Last Name
@@ -33,6 +34,9 @@
       %tbody
         - @students.each_with_index do |student, index|
           %tr
+            %td
+              = div_for student do
+                = link_to flagged_user_icon(current_course, current_user, student.id), flag_user_path(student), method: :post, remote: true, class: "flagged-user-icon"
             %td{"data-title" => "Rank"}= index + 1
             %td{"data-title" => "First Name"}= link_to student.first_name, student_path(student)
             %td{"data-title" => "Last Name"}= link_to student.last_name, student_path(student)
@@ -53,8 +57,7 @@
                     %img{:src => badge.icon, :alt => badge.name, :width => "20", :title => badge.name}
               %td{:style => "display: none"}= student.earned_badges_for_course(current_course).count
             %td{"data-title" => "Options"}
-              = div_for student, class: "right", style: "min-width: 160px;" do
+              .right
                 %ul.button-bar
-                  %li= link_to flagged_user_icon(current_course, current_user, student.id), flag_user_path(student), method: :post, remote: true, class: "button flagged-user-icon"
                   %li= mail_to student.email, raw('<i class="fa fa-envelope fa-fw"></i> Email'), :class => "button"
                   %li= link_to raw('<i class="fa fa-edit fa-fw"></i> Edit'), edit_user_path(student), :class => "button"
