--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -51,7 +51,7 @@
           %td
             .subtitle= link_to badge.name, badge_path(badge)
             = raw badge.description
-          %td= badge.awarded_count
+          %td= points badge.awarded_count
           %td
             .right
               %ul.button-bar
