--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -66,7 +66,7 @@
                   - if assignment.pass_fail?
                     %td.foobers= "#{term_for :pass}/#{term_for :fail}"
                   - else
-                    %td.doobers= assignment.point_total
+                    %td.doobers= points assignment.point_total
                   %td= "Yes" if assignment.rubric and assignment.rubric.designed?
                   %td
                     .right
