--- a/app/views/announcements/_list.html.haml
+++ b/app/views/announcements/_list.html.haml
@@ -7,8 +7,8 @@
       - if current_user.is_staff?(current_course)
         %th Read
   %tbody
-    - @announcements.each do |announcement|
-      - cache ["v1", announcement] do
+    - cache collection_cache_key :announcements, current_course.updated_at do
+      - @announcements.each do |announcement|
         %tr{class: current_user.is_student?(current_course) ? announcement.read?(current_user) ? "read" : "unread" : ""}
           %td= announcement.author.public_name
           %td= link_to announcement.title, announcement_path(announcement)
