--- a/app/views/students/sidebar/_sidebar_to_do_list.haml
+++ b/app/views/students/sidebar/_sidebar_to_do_list.haml
@@ -1,23 +1,24 @@
 .text-center
   %h3 Due This Week
   %hr
-  - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
-    - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
-      .assignment-item
-        - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
-          - if assignment.is_individual?
-            .right= render "students/submissions", assignment: assignment
+  - cache collection_cache_key :student_sidebar_todo_list, current_student.id, current_student.updated_at, current_course.updated_at do
+    - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
+      - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
+        .assignment-item
+          - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
+            - if assignment.is_individual?
+              .right= render "students/submissions", assignment: assignment
+            - else
+              .right= render "students/group_submissions", assignment: assignment, group: current_student.group_for_assignment(assignment)
+          - if assignment.is_predicted_by_student?(current_student)
+            %a
+              %i.fa.fa-star.fa-fw.yellow
+            .display_on_hover.hover-style
+              You have planned to do this #{term_for :assignment}
+          - if current_student.submission_for_assignment(assignment).present?
+            %span.bold.strikethrough= link_to "#{assignment.try(:name)}", assignment
+            .small.uppercase= "#{assignment.assignment_type.name}"
           - else
-            .right= render "students/group_submissions", assignment: assignment, group: current_student.group_for_assignment(assignment)
-        - if assignment.is_predicted_by_student?(current_student)
-          %a
-            %i.fa.fa-star.fa-fw.yellow
-          .display_on_hover.hover-style
-            You have planned to do this #{term_for :assignment}
-        - if current_student.submission_for_assignment(assignment).present?
-          %span.bold.strikethrough= link_to "#{assignment.try(:name)}", assignment
-          .small.uppercase= "#{assignment.assignment_type.name}"
-        - else
-          %span.bold= link_to assignment.name, assignment_grade_path(assignment, :student_id => current_student)
-          .small.uppercase= "#{assignment.assignment_type.name}"
-          .form_label= "Due: #{assignment.try(:due_at).strftime("%A, %B %d, %Y, at %l:%M%p")}"
+            %span.bold= link_to assignment.name, assignment_grade_path(assignment, :student_id => current_student)
+            .small.uppercase= "#{assignment.assignment_type.name}"
+            .form_label= "Due: #{assignment.try(:due_at).strftime("%A, %B %d, %Y, at %l:%M%p")}"
