--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -4,38 +4,33 @@
   %ul.block-grid
     - cache collection_cache_key :student_sidebar_badges, current_student.id, current_student.updated_at, current_course.updated_at do
       - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
-        %li
-          - if badge.point_total.present? && badge.point_total > 0
-            - if badge.is_unlockable?
-              - if badge.is_unlocked_for_student?(current_student)
-                %a
-                  %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                .display_on_hover.hover-style
-                  %i.fa.fa-unlock-alt= " #{badge.name}, #{badge.point_total} points"
+        - cache ["v1", badge] do
+          %li
+            - if badge.point_total.present? && badge.point_total > 0
+              - if badge.is_unlockable?
+                - if badge.is_unlocked_for_student?(current_student)
+                  %a
+                    %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
+                  .display_on_hover.hover-style
+                    %i.fa.fa-unlock-alt= " #{badge.name}, #{badge.point_total} points"
+                - else
+                  %a
+                    %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
+                  .display_on_hover.hover-style
+                    ="#{badge.name}, #{badge.point_total} points"
               - else
                 %a
-                  %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
+                  %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
                 .display_on_hover.hover-style
-                  ="#{badge.name}, #{badge.point_total} points"
-            - else
-              %a
-                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
-              .display_on_hover.hover-style
-                = "#{badge.name}"
+                  = "#{badge.name}"
 
-        - current_student.student_visible_unearned_badges(current_course).each do |badge|
+      - current_student.student_visible_unearned_badges(current_course).each do |badge|
+        - cache ["v1", badge] do
           %li
             %a
               %img{:src => badge.try(:icon), :alt => "#{badge.try(:name)}", :class => "unearned"}
             .display_on_hover.hover-style
               = "#{badge.name}"
-
-      - current_student.student_visible_unearned_badges(current_course).each do |badge|
-        %li
-          %a
-            %img{:src => badge.try(:icon), :alt => "#{badge.try(:name)}", :class => "unearned"}
-          .display_on_hover.hover-style
-            = "Not yet earned: #{badge.name}"
 
     - if current_student.earned_badge_score > 0
       .italic.small= "You've earned #{points current_student.earned_badge_score} points through #{(term_for :badges).titleize}."
