--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -28,11 +28,11 @@
       %li{class: ("active" if current_page?(my_badges_path)) }
         = link_to_unless_current "#{term_for :badges}", my_badges_path
     %li{class: ("active" if current_page?(announcements_path)) }
-      - unread_count = Announcement.unread_count_for current_student, current_course
+      - unread_count = unread_count_for current_student, current_course
       - if unread_count > 0
         = link_to_unless_current "Announcements", announcements_path, :class => "notification-right"
         %div.notification-badge.announcement-notification-badge= unread_count
-      - else 
+      - else
         = link_to_unless_current "Announcements", announcements_path
     - if current_course.has_teams? && current_course.teams_visible?
       %li{class: ("active" if current_page?(my_team_path)) }
