--- a/app/views/layouts/navigation/_course_list.haml
+++ b/app/views/layouts/navigation/_course_list.haml
@@ -1,4 +1,4 @@
-- cache collection_cache_key :current_user_current_courses, current_user.id, current_user.updated_at do
+- cache collection_cache_key :current_user_current_courses, current_user do
   - current_user.courses.alphabetical.each do |c|
     - cache ["v1", c] do
       - if c.active?
@@ -6,7 +6,7 @@
     - if current_user_is_staff?
       %li= link_to raw("Create a New Course <i class='fa fa-angle-double-right fa-fw'></i>"), new_course_path
 
-- cache collection_cache_key :current_user_archived_courses, current_user.id, current_user.updated_at do
+- cache collection_cache_key :current_user_archived_courses, current_user do
   - if current_user.archived_courses.present?
     %hr.dotted.top-margin
     %h4.past-label Past Courses
