--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -2,7 +2,7 @@
   %h3= term_for :badges
   %hr
   %ul.block-grid
-    - cache collection_cache_key :student_sidebar_badges, current_student.id, current_student.updated_at, current_course.updated_at do
+    - cache collection_cache_key :student_sidebar_badges, current_student, current_course do
       - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
         - cache ["v1", badge] do
           %li
@@ -17,12 +17,17 @@
                   %a
                     %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
                   .display_on_hover.hover-style
-                    ="#{badge.name}, #{badge.point_total} points"
+                    %i.fa.fa-lock= " #{badge.name}, #{badge.point_total} points"
               - else
                 %a
-                  %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
+                  %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
                 .display_on_hover.hover-style
-                  = "#{badge.name}"
+                  ="#{badge.name}, #{badge.point_total} points"
+            - else
+              %a
+                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
+              .display_on_hover.hover-style
+                = "#{badge.name}"
 
       - current_student.student_visible_unearned_badges(current_course).each do |badge|
         - cache ["v1", badge] do
@@ -30,7 +35,7 @@
             %a
               %img{:src => badge.try(:icon), :alt => "#{badge.try(:name)}", :class => "unearned"}
             .display_on_hover.hover-style
-              = "#{badge.name}"
+              = "Not yet earned: #{badge.name}"
 
     - if current_student.earned_badge_score > 0
       .italic.small= "You've earned #{points current_student.earned_badge_score} points through #{(term_for :badges).titleize}."
