--- a/app/views/assignment_types/_form.html.haml
+++ b/app/views/assignment_types/_form.html.haml
@@ -13,8 +13,8 @@
 
     .form-item
       / What's the maximum number of points a student may earn in this category? This cap needs to be finished
-      = f.label :max_value, :label => "Maximum Points"
-      = f.text_field :max_value, data: {autonumeric: true, "m-dec" => "0"}
+      = f.label :max_points, :label => "Maximum Points"
+      = f.text_field :max_points, data: {autonumeric: true, "m-dec" => "0"}
       .form_label{:id => "txtMaxPoints"} Is there a cap on how many points students can earn through this category (Leave blank if not)? If you fill this in, students will not be able to earn more than this amount.
 
     .form-item
@@ -27,7 +27,7 @@
     .form-item
       .textarea
         .form_label How would you like to describe this #{term_for :assignment} type on the student dashboard? Are there hints that you can give students that will help them understand how to succeed?
-        = f.text_area :predictor_description, :label => "Description", :class => "froala"
+        = f.text_area :description, :label => "Description", :class => "froala"
 
   .submit-buttons
     %ul
