--- a/app/views/announcements/_list.html.haml
+++ b/app/views/announcements/_list.html.haml
@@ -7,7 +7,7 @@
       - if current_user.is_staff?(current_course)
         %th Read
   %tbody
-    - cache collection_cache_key :announcements, current_course do
+    - cache multi_cache_key :announcements, current_course do
       - @announcements.each do |announcement|
         %tr{class: current_user.is_student?(current_course) ? announcement.read?(current_user) ? "read" : "unread" : ""}
           %td= announcement.author.public_name
