--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -2,7 +2,7 @@
   %h3= term_for :badges
   %hr
   %ul.block-grid
-    - cache collection_cache_key :student_sidebar_badges, current_student, current_course do
+    - cache multi_cache_key :student_sidebar_badges, current_student, current_course do
       - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
         - cache ["v1", badge] do
           %li
