--- a/app/views/students/sidebar/_sidebar_to_do_list.haml
+++ b/app/views/students/sidebar/_sidebar_to_do_list.haml
@@ -1,7 +1,7 @@
 .text-center
   %h3 Due This Week
   %hr
-  - cache collection_cache_key :student_sidebar_todo_list, current_student, current_course do
+  - cache multi_cache_key :student_sidebar_todo_list, current_student, current_course do
     - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
       - cache ["v1", assignment] do
         - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
