--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -46,6 +46,9 @@ body
 .large
   font-size: 1.5rem
 
+.align-right
+  text-align: right
+
 a
   text-decoration: none
   color: lighten($primary-color-1, 10%)
