--- a/app/views/assignments/_rubric_preview.html.haml
+++ b/app/views/assignments/_rubric_preview.html.haml
@@ -1,32 +1,36 @@
 .tab-container
-  %table#grade-rubric-table
+  %table#grade-rubric-table.preview
     %thead
       %tr
-        %td
-          .bold Criteria
-        %td(colspan="#{@assignment.rubric.try(:max_tier_count)}")
-          .bold Levels
+        %td.metric.heading
+          %label.larger
+            <strong>Criterion</strong>:&nbsp;Max&nbsp;points
+
+        %td.tier.heading(colspan="#{@rubric.max_tier_count}")
+          %label.larger
+            %strong Level:
+            Points Awarded
 
     %tbody
       - @metrics.each do |metric|
         %tr
-          %td
+          %td.metric
             .metric-heading
-              %h3.metric-name.bold= metric.wrapped_name(28).html_safe
-              .metric-points.italic= "#{points metric.max_points} Points"
+              .metric-name= metric.wrapped_name(28).html_safe
+              .metric-points= "#{points metric.max_points} Points"
             .metric-description= metric.wrapped_description(40).html_safe
           - metric.tiers.sorted.each do |tier|
-            %td.tier-td
+            %td.tier.tier-level
               .tier-heading
-                .tier-name.uppercase= tier.wrapped_name(25).html_safe
-                .tier-points.italic= "#{points tier.points} Points"
+                .tier-name= tier.wrapped_name(25).html_safe
+                .tier-points= "#{points tier.points} Points"
               .tier-description= tier.description
 
-              .row
+              .row.badge-row
                 - tier.tier_badges.each_with_index do |badge, index|
                   - if index < 2
                     .tier-badge-image
-                      %img{:src => badge.badge.icon, :class => "tier_badge", :width => "40px" }
+                      %img{:src => badge.badge.icon, :class => "tier_badge" }
           - rubric_max_tier_count = @rubric.max_tier_count
           - if metric.tiers.size < rubric_max_tier_count
             %td.filler(colspan="#{rubric_max_tier_count - metric.tiers.size}")
