--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -1,4 +1,4 @@
-.small-12.columns
+.pageContent
   #rubric-grader(ng-app="gradecraft" ng-controller="GradeRubricCtrl" ng-init="init(#{@rubric[:id]}, #{@assignment[:id]}, #{params[:student_id]}, #{@rubric_grades}, \"#{@grade.status if @grade}\", #{@assignment.release_necessary?})")
     .row
       #rubric-heading.small-7.columns
@@ -20,12 +20,12 @@
 
     #grade-status(ng-cloak)
 
-    #rubric-grader-splash.large-12.columns.text-center(ng-cloak)
+    #rubric-grader-splash.columns.text-center(ng-cloak)
       Loading assignment...
       %br
       %br
 
-    %table#grade-rubric-table(ng-cloak)
+    %table#grade-rubric-table.edit(ng-cloak)
       %thead
         %tr
           %td.metric.heading
@@ -49,7 +49,7 @@
                 {{(metric.max_points || 0) | number:0}}&nbsp;Points
             .metric-description {{metric.description}}
 
-          %td.tier(ng-repeat="tier in metric.tiers" ng-click="metric.gradeWithTier(tier)" ng-class="{selected: metric.isUsingTier(tier)}")
+          %td.tier.tier-level(ng-repeat="tier in metric.tiers" ng-click="metric.gradeWithTier(tier)" ng-class="{selected: metric.isUsingTier(tier)}")
             .tier-heading
               .tier-name {{tier.name.replace(' ','&nbsp;')}}
               .tier-points
@@ -63,33 +63,35 @@
                 %img(src="{{tierBadge.badge.icon}}" height="50px")
               .clear
           %td.filler(ng-show="metric.tiers.length < #{@rubric.max_tier_count}" colspan="{{#{@rubric.max_tier_count} - metric.tiers.length}}")
-          %td.comments
+          %td.comments-box
             %textarea(ng-model="metric.comments")
 
     %br
-    .row.text-center.points-given
-      .points-overview.bottom(ng-cloak)
-        %h4.points-legend
-          %span.points-assigned(ng-class="{'points-missing': pointsMissing(), 'points-satisfied': pointsSatisfied(), 'points-overage': pointsOverage()}") {{pointsGiven() | number:0}}
-          \/{{pointsPossible | number:0}} Points Allocated
-        %h4.notice(ng-hide="pointsSatisfied() || pointsMissing()") You have not yet allocated any points
-        %h4.notice(ng-show="pointsMissing()") {{pointsRemaining() | number:0}} point{{pointsRemaining() > 1 ? "s" : ""}} have not been assigned
-        %h4.notice(ng-show="pointsSatisfied()") You have allocated all possible points
-      .clear
+    .right
+      .points-given
+        .points-overview.bottom(ng-cloak)
+          %h4.points-legend
+            %span.points-assigned(ng-class="{'points-missing': pointsMissing(), 'points-satisfied': pointsSatisfied(), 'points-overage': pointsOverage()}") {{pointsGiven() | number:0}}
+            \/{{pointsPossible | number:0}} Points Allocated
+          %h4.notice(ng-hide="pointsSatisfied() || pointsMissing()") You have not yet allocated any points
+          %h4.notice(ng-show="pointsMissing()") {{pointsRemaining() | number:0}} point{{pointsRemaining() > 1 ? "s" : ""}} have not been assigned
+          %h4.notice(ng-show="pointsSatisfied()") You have allocated all possible points
+    .clear
 
 
     - if @assignment.release_necessary?
-      .small-12.large-4.columns
+      .right
 
-      .row
-        - if current_user_is_gsi?
-          %select(ng-model="gradeStatus" ng-options="status for status in gsiGradeStatuses")
-            %option(value="" disabled) Select grade status for this submission...
-          .form_label Is this grade ready to be reviewed?
-        - else
-          %select(ng-model="gradeStatus" ng-options="status for status in professorGradeStatuses")
-            %option(value="" disabled) Select grade status for this submission...
-          .form_label Can the student see this grade?
+        .row
+          - if current_user_is_gsi?
+            %select(ng-model="gradeStatus" ng-options="status for status in gsiGradeStatuses")
+              %option(value="" disabled) Select grade status for this submission...
+            .form_label Is this grade ready to be reviewed?
+          - else
+            %select(ng-model="gradeStatus" ng-options="status for status in professorGradeStatuses")
+              %option(value="" disabled) Select grade status for this submission...
+            .align-right.form_label Can the student see this grade?
 
-    .row.text-center
+    .clear 
+    .right
       %button#submit-grade(ng-click="submitGrade()" ng-disabled="selectedTiers().length == 0") Submit Grade
