--- a/app/views/grades/_rubric_grade_results.haml
+++ b/app/views/grades/_rubric_grade_results.haml
@@ -1,4 +1,4 @@
-%table#rubric-results-table.small-12
+%table#rubric-results-table
   %thead
     %tr
       %td.metric.heading
@@ -21,7 +21,7 @@
           .metric-description= metric.wrapped_description(40).html_safe
 
         - metric.tiers.order("points ASC").each do |tier|
-          %td.tier
+          %td.tier.tier-level
             .tier-heading
               .tier-name= tier.wrapped_name(25).html_safe
               .clear
@@ -47,6 +47,6 @@
               .graded-students= "#{pluralize(tier.rubric_grades.size, 'student')} earned this level"
         - if metric.tiers.size < @rubric.max_tier_count
           %td.filler(colspan="#{@rubric.max_tier_count - metric.tiers.size}")
-        %td.tier.tier-comments.italic
+        %td.tier.tier-comments.comments-box
           - if @comments_by_metric_id.size > 0
             = @comments_by_metric_id[metric.id]
