--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -104,6 +104,10 @@ tbody
   &.flagged
     color: $color-orange-1
 
+.tab-container 
+  .button
+    color: $color-grey-5
+
 @media (max-width: 1000px)
   .hide-for-small
     display: none
