--- a/app/views/submissions/_student_show.haml
+++ b/app/views/submissions/_student_show.haml
@@ -2,11 +2,10 @@
 
 - if @assignment.is_individual?
   - if (@assignment.open? && ! current_student.grade_released_for_assignment?(@assignment)) || (@assignment.open? && @assignment.resubmissions_allowed?)
-    %a{:href => "#{edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment))}?student_id=#{current_student.id}", :class => 'button'  }
-      Edit My Submission
+     
+    = link_to "Edit My Submission", edit_assignment_submission_path(@assignment, current_student.submission_for_assignment(@assignment)), :class => "button"
     .clear
 
-  %br
   %p
     %span.smallcaps Submitted:
     = current_student.submission_for_assignment(@assignment).created_at
