--- a/app/assets/stylesheets/_breadcrumbs.sass
+++ b/app/assets/stylesheets/_breadcrumbs.sass
@@ -1,9 +1,9 @@
 .breadcrumbs
   padding: 1.5rem .5rem 0rem 1rem
   overflow: hidden
-  background-color: $primary-color-1
+  background-color: $color-blue-0
   opacity: .8
-  border-left: 1px solid $primary-color-2
+  border-left: 1px solid $color-blue-1
 
   a
     text-decoration: none
