--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -10,11 +10,11 @@
   font-size: .7rem !important
   line-height: .8rem
   cursor: pointer
-  background-color: $primary-color-2
+  background-color: $color-blue-1
   white-space: nowrap
 
   &:hover
-    background-color: $primary-color-1
+    background-color: $color-blue-0
     color: #FFF
 
   &:active
@@ -31,7 +31,7 @@
     margin: 0
     padding: 0
     overflow: hidden
-    background-color: $primary-color-2
+    background-color: $color-blue-1
     border-radius: $global-radius
 
     li
@@ -51,7 +51,7 @@
 thead
   .button
     border: none
-    background-color: $primary-color-2
+    background-color: $color-blue-1
     &:hover
       background-color: $primary-color-3
     &.select-all
