--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -22,13 +22,13 @@ section.features
   padding: 2rem 0
 
   input.button 
-    background-color: $primary-color-1 !important
+    background-color: $color-blue-0 !important
 
 .video-promo, .newsletter
   padding: 2rem
 
 .press-container
-  background-color: $primary-color-1
+  background-color: $color-blue-0
   opacity: .9
   color: #000
   margin: 0
@@ -68,7 +68,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
       height: 400px
 
     &.pedagogy
-      background-color: $primary-color-2
+      background-color: $color-blue-1
       opacity: .8
       padding: 1rem 0
       height: 400px
@@ -81,7 +81,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
 
     &.twitter
       float: left
-      background-color: $primary-color-1
+      background-color: $color-blue-0
 
     h1
       padding: 0 1rem
@@ -94,7 +94,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
     padding-bottom: 0
     font-family: Avenir, san-serif
     font-weight: 100
-    color: $primary-color-1
+    color: $color-blue-0
     font-size: 2rem
 
   ul
@@ -145,7 +145,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
       opacity: .9
 
     .ui-tabs-nav
-      background: lighten($primary-color-1, 60%) !important
+      background: lighten($color-blue-0, 60%) !important
       border-bottom: 10px solid lighten($color-blue-0, 10%)
       li
         border: 0
