--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -55,7 +55,7 @@ body
       a
         color: #FFF
         &:hover
-          color: $primary-color-1
+          color: $color-blue-0
 .pageContainer
   margin: 0 .75rem
   width: calc(100% - 290px)
@@ -96,7 +96,7 @@ body
       a
         color: #FFF
         &:hover
-          color: $primary-color-1
+          color: $color-blue-0
 
 .tab-container
   padding: 1rem
