--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -2,11 +2,11 @@
   width: 276px
   margin-top: 0rem
   padding: 1rem
-  background-color: $primary-color-1
+  background-color: $color-blue-0
   color: #FFF
   opacity: .9
   float: left
-  border-left: 1px dashed $primary-color-1
+  border-left: 1px dashed $color-blue-0
 
   .avatar
     text-align: center
