--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -28,7 +28,7 @@
     li
       font-size: .75rem
       height: 1rem
-      background-color: $primary-color-1
+      background-color: $color-blue-0
       border-top-left-radius: $global-radius
       border-top-right-radius: $global-radius
       margin: 0 0.5rem 0 0 
@@ -64,6 +64,6 @@ li a.notification-right
 
   .student .offscreen-sidebar
     padding-top: 3rem
-    background-color: $primary-color-1
+    background-color: $color-blue-0
     .sidebar
-      background-color: $primary-color-1
+      background-color: $color-blue-0
