--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -28,7 +28,7 @@
   border: 0
 
 .ui-tabs .ui-tabs-nav
-  background: lighten($primary-color-1, 60%) !important
+  background: lighten($color-blue-0, 60%) !important
   border-bottom: 10px solid lighten($color-blue-0, 10%)
 
   li.ui-state-default
