--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -145,7 +145,7 @@
       padding: 5px 10px
       display: block
       &:hover
-        background-color: lighten($primary-color-1, 10%)
+        background-color: lighten($color-blue-0, 10%)
         color: #FFF
 
   li.dropdown a.section-title
@@ -207,7 +207,7 @@ img.profile-pic
       margin-left: .25rem
     .course_semester
       margin-left: .5rem
-      color: $primary-color-2
+      color: $color-blue-1
       text-transform: uppercase
 
     .tagline
@@ -217,7 +217,7 @@ img.profile-pic
   /* Active State */ 
   .the-nav > .nav > li:hover > a
     color: #FFF
-    background-color: darken($primary-color-1, 5%)
+    background-color: darken($color-blue-0, 5%)
   .the-nav > .nav > li:hover > a.no-hover
     background-color: $color-blue-00
     color: $primary-color-4
@@ -248,7 +248,7 @@ img.profile-pic
     padding: 6px 10px
     transition: all .2s
   .nav > li > .subnav > li:hover a
-    background: $primary-color-1
+    background: $color-blue-0
     color: white
   .nav > li > .subnav > li:last-of-type a:hover
     border-bottom-left-radius: $global-radius
@@ -256,7 +256,7 @@ img.profile-pic
 
 ul.subnav.logged-out
   left: -6.25rem
-  background-color: $primary-color-2
+  background-color: $color-blue-1
   border-bottom-left-radius: $global-radius
   border-bottom-right-radius: $global-radius
   padding: .5rem 0 
