--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -51,7 +51,7 @@ body
 
 a
   text-decoration: none
-  color: lighten($primary-color-1, 10%)
+  color: lighten($color-blue-0, 10%)
 
 a:hover
   color: $secondary-color-1
@@ -65,7 +65,7 @@ hr
   margin-right: -1.2rem
   top: -0.6rem
   text-transform: normal
-  background-color: $primary-color-1
+  background-color: $color-blue-0
 
 /** Page Title **/
 h3.pagetitle
@@ -73,17 +73,17 @@ h3.pagetitle
   color: #FFF
   padding: .75rem 1rem .2rem
   font-size: 1.8rem
-  background-color: $primary-color-1
+  background-color: $color-blue-0
   line-height: 2.5rem
   font-weight: 100
   opacity: .8
-  border-left: 1px solid $primary-color-2
+  border-left: 1px solid $color-blue-1
 
 /** Subtitle **/
 h4.subtitle
   font-size: 1.3rem
   line-height: 1.0
-  color: $primary-color-1
+  color: $color-blue-0
   clear: both
   margin: 1rem 0 1rem
 
@@ -108,7 +108,7 @@ h4.assignment_name
 
 h5.section-title
   font-size: 1.3rem
-  background-color: $primary-color-1
+  background-color: $color-blue-0
   padding: .5rem 1rem
   margin: 1px 2px 0 1px
   z-index: 10 !important
