--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -42,7 +42,7 @@ select:hover
   display: none
   float: left
   padding: 5px
-  background-color: lighten($primary-color-1, 70%)
+  background-color: lighten($color-blue-0, 70%)
   margin: 2px 0 0
   font-size: 14px
   list-style: none
@@ -61,7 +61,7 @@ select:hover
     color: $color-grey-1 !important
 
   li:hover, li.active a, li.active
-    background-color: $primary-color-1
+    background-color: $color-blue-0
     color: #fff !important
 
   &.course-result
