--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -3,7 +3,7 @@
   width: 220px
   float: left
   padding: .75rem 1rem
-  background-color: $primary-color-1
+  background-color: $color-blue-0
   opacity: .8
 
   li.has-form
@@ -59,7 +59,7 @@
       text-decoration: none
 
     a:hover, a:focus
-      background-color: $primary-color-2 !important
+      background-color: $color-blue-1 !important
       color: #FFF
 
   /* Spacing the list divider */
